--- a/public/audit-logs.html
+++ b/public/audit-logs.html
@@ -11,91 +11,42 @@
     :root{
       --w-chk: 46px;   /* عمود التحديد */
       --w-idx: 64px;   /* عمود الرقم */ 
-      /* بقية الأعمدة تصبح تلقائية حسب المحتوى */
       --before-w: 35%;
       --after-w: 35%;
     }
-
-    /* مساواة ارتفاع شارة معلومات المستخدم بزر "خروج" */
     .user-chip{
-      display: inline-flex;
-      align-items: center;
-      gap: .25rem;
-      font-size: 1rem;         /* نفس حجم خط الأزرار */
-      padding: .375rem .75rem; /* نفس حشوة الأزرار */
-      line-height: 1.5;        /* نفس خط الأساس للأزرار */
-      border-radius: .375rem;  /* نفس نصف القطر للأزرار */
+      display:inline-flex;align-items:center;gap:.25rem;font-size:1rem;padding:.375rem .75rem;line-height:1.5;border-radius:.375rem
     }
-
     body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
     .container{max-width:1200px;margin-top:40px}
     .card{border-radius:16px;box-shadow:0 6px 18px rgba(0,0,0,.06)}
-    .user-chip{font-size:.9rem}
-
-    /* جدول رئيسي يعتمد العرض على المحتوى */
-    .table { table-layout: auto; width:100%; }
+    .table{table-layout:auto;width:100%}
     .table thead th{vertical-align:middle;white-space:nowrap}
-    #logsTbody > tr > td{ vertical-align: top; }
-
-    /* بطاقات "قبل/بعد" بخط أصغر */
-    .payload-card{
-      background:#fff;border:1px solid #e9ecef;border-radius:12px;padding:10px;
-      height:220px;overflow:auto;
-      font-size: .9rem;
-      line-height: 1.35;
-    }
+    #logsTbody>tr>td{vertical-align:top}
+    .payload-card{background:#fff;border:1px solid #e9ecef;border-radius:12px;padding:10px;height:220px;overflow:auto;font-size:.9rem;line-height:1.35}
     .payload-card dt{color:#6c757d;font-weight:600}
     .payload-card dd{margin-bottom:.45rem}
-    .payload-json{
-      direction:ltr;background:#f6f8fa;border-radius:8px;padding:8px;
-      font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace
-    }
-
-    .filters .form-control, .filters .form-select{min-width:160px}
-
+    .payload-json{direction:ltr;background:#f6f8fa;border-radius:8px;padding:8px;font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
+    .filters .form-control,.filters .form-select{min-width:160px}
     .sticky-actions{position:sticky;bottom:0;background:#fff;border-top:1px solid #e9ecef;padding:12px;border-radius:0 0 16px 16px}
     .count-badge{font-size:.85rem}
-
-    /* إبراز الاختلافات */
     .diff-added{color:#198754;font-weight:600;background:rgba(25,135,84,.12);border-radius:6px;padding:2px 6px}
     .diff-removed{color:#dc3545;font-weight:600;background:rgba(220,53,69,.12);border-radius:6px;padding:2px 6px}
-
-    /* الجداول داخل بطاقات “البيانات قبل/بعد” */
-    .payload-card .table{ table-layout: fixed; width:100%; }
-    .payload-card .table th,
-    .payload-card .table td{
-      white-space: normal;
-      word-break: break-word;
-      overflow-wrap: anywhere;
-    }
-    .payload-card .badge { white-space: nowrap; }
-    .payload-card { direction: rtl; }
-    .payload-card .email,
-    .payload-card code,
-    .payload-card .payload-json {
-      direction: ltr; unicode-bidi: plaintext; word-break: break-all;
-    }
-
-    .nochange-note{
-      border:1px solid rgba(13,110,253,.25);
-      background:rgba(13,110,253,.06);
-      color:#0d6efd;border-radius:10px;padding:4px 8px;font-size:.85rem;
-    }
+    .payload-card .table{table-layout:fixed;width:100%}
+    .payload-card .table th,.payload-card .table td{white-space:normal;word-break:break-word;overflow-wrap:anywhere}
+    .payload-card .badge{white-space:nowrap}
+    .payload-card{direction:rtl}
+    .payload-card .email,.payload-card code,.payload-card .payload-json{direction:ltr;unicode-bidi:plaintext;word-break:break-all}
+    .nochange-note{border:1px solid rgba(13,110,253,.25);background:rgba(13,110,253,.06);color:#0d6efd;border-radius:10px;padding:4px 8px;font-size:.85rem}
     .payload-card .table thead th{white-space:nowrap}
-
-    /* توحيد حجم الخط */
-    .table thead th,
-    .table tbody td { font-size: .9rem; }
-
-    .date-cell .d,
-    .date-cell .t { font-size: .9rem; }
-    .date-cell .d { font-weight: 600; }
-    .date-cell .t { color:#6c757d; margin-top:2px; }
+    .table thead th,.table tbody td{font-size:.9rem}
+    .date-cell .d,.date-cell .t{font-size:.9rem}
+    .date-cell .d{font-weight:600}
+    .date-cell .t{color:#6c757d;margin-top:2px}
   </style>
 </head>
 <body>
   <div class="container">
-    <!-- Header -->
     <div class="d-flex flex-wrap justify-content-between align-items-center mb-4 gap-2">
       <h3 class="mb-0">سجل العمليات</h3>
       <div class="d-flex align-items-center gap-2">
@@ -115,7 +66,6 @@
       </div>
     </div>
 
-    <!-- فلاتر -->
     <div class="card mb-3">
       <div class="card-body">
         <div class="filters d-flex flex-wrap align-items-end gap-2">
@@ -160,22 +110,17 @@
       </div>
     </div>
 
-    <!-- الجدول -->
     <div class="card">
       <div class="card-body p-0">
         <div class="table-responsive">
           <table class="table table-hover mb-0">
             <colgroup>
-              <col style="width:var(--w-chk)"><!-- اختيار -->
-              <col style="width:var(--w-idx)"><!-- # -->
-              <col><!-- الوقت -->
-              <col><!-- الصفحة -->
-              <col><!-- العملية -->
-              <col><!-- المستخدم -->
-              <col style="width:var(--before-w)"><!-- قبل -->
-              <col style="width:var(--after-w)"><!-- بعد -->
+              <col style="width:var(--w-chk)">
+              <col style="width:var(--w-idx)">
+              <col><col><col><col>
+              <col style="width:var(--before-w)">
+              <col style="width:var(--after-w)">
             </colgroup>
-
             <thead class="table-light">
               <tr>
                 <th class="text-center"><input class="form-check-input" type="checkbox" id="chkAll" title="تحديد/إلغاء تحديد الكل"></th>
@@ -194,25 +139,20 @@
           </table>
         </div>
 
-        <!-- شريط الإجراءات -->
         <div class="sticky-actions d-flex flex-wrap justify-content-between align-items-center gap-2">
           <div class="d-flex flex-wrap gap-2">
             <button id="btnMore" class="btn btn-outline-secondary"><i class="bi bi-plus-circle"></i> تحميل المزيد</button>
-            <!-- زر جديد: تحميل جميع السجلات -->
             <button id="btnLoadAll" class="btn btn-outline-primary"><i class="bi bi-cloud-download"></i> تحميل جميع السجلات</button>
             <button id="btnPurge" class="btn btn-outline-danger"><i class="bi bi-trash3"></i> حذف كل السجلات</button>
             <button id="btnPurgeRange" class="btn btn-outline-warning"><i class="bi bi-calendar-x"></i> حذف حسب التاريخ</button>
             <button id="btnDeleteSelected" class="btn btn-danger" disabled><i class="bi bi-check2-square"></i> حذف السجلات المحددة</button>
           </div>
-          <div>
-            <span class="badge text-bg-light count-badge">المحدد: <span id="selectedCount">0</span></span>
-          </div>
+          <div><span class="badge text-bg-light count-badge">المحدد: <span id="selectedCount">0</span></span></div>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Toasts -->
   <div class="toast-container position-fixed top-0 start-50 translate-middle-x p-3" style="z-index:2000">
     <div id="toastSuccess" class="toast align-items-center text-bg-success border-0 mb-2" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="d-flex">
@@ -234,7 +174,6 @@
     </div>
   </div>
 
-  <!-- Modal تأكيد -->
   <div class="modal fade" id="confirmModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
@@ -251,7 +190,6 @@
     </div>
   </div>
 
-  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
@@ -310,27 +248,27 @@
     document.getElementById('userRole').textContent     = u.role;
   }
   async function ensureAdmin(){
-  const meRes = await fetchJSON(api('/auth/committees/me'));
-  if(meRes.__nonJSON__ || meRes.__badJSON__ || !meRes.ok){
-    const rel = location.pathname + location.search + location.hash;
-    location.href = api(`/committees-login.html?next=${encodeURIComponent(rel)}`);
-    throw new Error('unauthenticated');
+    const meRes = await fetchJSON(api('/auth/committees/me'));
+    if(meRes.__nonJSON__ || meRes.__badJSON__ || !meRes.ok){
+      const rel = location.pathname + location.search + location.hash;
+      location.href = api(`/committees-login.html?next=${encodeURIComponent(rel)}`);
+      throw new Error('unauthenticated');
+    }
+    const me = meRes.data || {};
+    if(!me.authenticated){
+      const rel = location.pathname + location.search + location.hash;
+      location.href = api(`/committees-login.html?next=${encodeURIComponent(rel)}`);
+      throw new Error('unauthenticated');
+    }
+    const role = (me.user?.role||'').toLowerCase();
+    if(role!=='admin'){
+      setToast(toastError,'❌ هذه الصفحة للمشرفين فقط'); toastError.show();
+      setTimeout(()=>location.href=api('/committees-home.html'),900);
+      throw new Error('not-admin');
+    }
+    renderUser(me.user);
+    return me.user;
   }
-  const me = meRes.data || {};
-  if(!me.authenticated){
-    const rel = location.pathname + location.search + location.hash; // ✅ تم التصحيح
-    location.href = api(`/committees-login.html?next=${encodeURIComponent(rel)}`);
-    throw new Error('unauthenticated');
-  }
-  const role = (me.user?.role||'').toLowerCase();
-  if(role!=='admin'){
-    setToast(toastError,'❌ هذه الصفحة للمشرفين فقط'); toastError.show();
-    setTimeout(()=>location.href=api('/committees-home.html'),900);
-    throw new Error('not-admin');
-  }
-  renderUser(me.user);
-  return me.user;
-}
 
   async function logout(){
     try{
@@ -347,7 +285,6 @@
     const cls = a==='delete'?'text-bg-danger':(a==='update'?'text-bg-warning':'text-bg-success');
     return `<span class="badge ${cls}">${a||'—'}</span>`;
   }
-
   function fmtUser(uRaw){
     const u = normalizeUser(uRaw);
     return `${u.name||'—'}`;
@@ -363,7 +300,7 @@
   function kv(label,val,key,diff,mode){ if(val==null||val==='') return ''; const cls=diff&&diff.has(key)?(mode==='before'?'diff-removed':'diff-added'):''; return `<dt>${label}</dt><dd class="${cls}">${escapeHtml(val)}</dd>`; }
   function userActiveBadge(val,key,diff,mode){ const is=!!val; const base=is?'<span class="badge text-bg-success">نشط</span>':'<span class="badge text-bg-danger">معطّل</span>'; const cls=diff&&diff.has(key)?(mode==='before'?'diff-removed':'diff-added'):''; return `<dt>الحالة</dt><dd class="${cls}">${base}</dd>`; }
 
-  /* ====== ملاحظات: تنظيف HTML وعرض الفارغ ====== */
+  /* ===== تنسيق/تنظيف الملاحظات ===== */
   function stripHtmlText(html){
     const tmp=document.createElement('div'); tmp.innerHTML=html||'';
     return (tmp.textContent||tmp.innerText||'').trim();
@@ -394,6 +331,23 @@
     }catch{ return '—'; }
   }
 
+  /* === بطاقة خاصة لتغيير كلمة المرور === */
+  function renderPasswordChangeCard(p, mode){
+    const who = (p?.targetName || p?.targetUsername || p?.targetEmail || '—');
+    const un  = p?.targetUsername ? ` — ${escapeHtml(p.targetUsername)}` : '';
+    const em  = p?.targetEmail ? ` — <span class="email">${escapeHtml(p.targetEmail)}</span>` : '';
+    const title = 'تم تغيير كلمة المرور';
+    if(mode==='before'){
+      return `<div class="payload-card"><dl class="row mb-0">
+        <dt>المستخدم المستهدف</dt><dd>${escapeHtml(who)}${un}${em}</dd>
+      </dl></div>`;
+    }
+    return `<div class="payload-card"><dl class="row mb-0">
+      <dt>العملية</dt><dd class="diff-added">${title}</dd>
+      <dt>المستخدم المستهدف</dt><dd>${escapeHtml(who)}${un}${em}</dd>
+    </dl></div>`;
+  }
+
   function renderCardFromObjectWithDiff(model,obj,diffKeys,mode,otherSide){
     if(!obj) return '<div class="payload-card text-muted">—</div>';
     let h='<div class="payload-card"><dl class="row mb-0">', d=obj, has=(k)=> d[k]!=null && d[k]!=='';    
@@ -408,16 +362,12 @@
       ['work_plan','performance_indicators','meetings','consistency','coverage_books','report1','report2','report3','statistical_analysis']
         .forEach(k=>{ if(has(k)) h+=kv(toArabicLabel(k),d[k],k,diffKeys,mode); });
 
-      /* ===== عرض الملاحظات مع تنسيقها وتظليل الاختلاف ===== */
-      {
+      { // notes
         const thisHas = !!stripHtmlText(d.notes);
         const otherHas = !!stripHtmlText(otherSide && otherSide.notes);
         const changed = diffKeys && diffKeys.has('notes');
         let cls='';
-        if(changed){
-          if(mode==='before'){ cls='diff-removed'; }
-          else { cls = thisHas ? 'diff-added' : 'diff-removed'; }
-        }
+        if(changed){ cls = (mode==='before') ? 'diff-removed' : (thisHas ? 'diff-added' : 'diff-removed'); }
         const content = thisHas ? sanitizeNotesHTML(d.notes) : 'لا توجد ملاحظات';
         h += `<dt>الملاحظات</dt><dd class="${cls}">${content}</dd>`;
       }
@@ -559,6 +509,7 @@
       if(p.before)              return renderSettingsDiff(p.before,{},'before');
       return '<div class="payload-card text-muted">—</div>';
     }
+    if(log.model==='User' && p.passwordChanged){ return renderPasswordChangeCard(p,'before'); } // ✅
     if(isBulkUserPayload(log)) return renderBulkUsersList(p,'before');
     if(log.action==='create')  return '<div class="payload-card text-muted">كانت فارغة</div>';
     if(log.action==='delete'){ const ks=p?new Set(Object.keys(p)):new Set(); return renderCardFromObjectWithDiff(log.model,p,ks,'before',{}); }
@@ -576,6 +527,7 @@
       if(p.after)               return renderSettingsDiff({},p.after,'after');
       return renderSettingsDiff({},p,'after');
     }
+    if(log.model==='User' && p.passwordChanged){ return renderPasswordChangeCard(p,'after'); } // ✅
     if(isBulkUserPayload(log)) return renderBulkUsersList(p,'after');
     if(log.action==='delete')  return '<div class="payload-card text-muted">تم الحذف</div>';
     if(log.action==='create'){ const ks=p?new Set(Object.keys(p)):new Set(); return renderCardFromObjectWithDiff(log.model,p,ks,'after',{}); }
@@ -694,7 +646,6 @@
   });
   document.getElementById('btnMore').addEventListener('click', ()=>{ if(!reachedEnd){ page++; loadLogs({append:true}); } else { setToast(toastInfo,'لا يوجد مزيد من السجلات'); toastInfo.show(); }});
 
-  /* ===== زر: تحميل جميع السجلات ===== */
   async function loadAllLogs(){
     const btn=document.getElementById('btnLoadAll');
     const oldHTML=btn.innerHTML;
@@ -702,8 +653,8 @@
       btn.disabled=true;
       btn.innerHTML='<span class="spinner-border spinner-border-sm"></span> جارِ التحميل...';
       page=1; reachedEnd=false;
-      await loadLogs({append:false});           // الصفحة 1
-      while(!reachedEnd){ page++; await loadLogs({append:true}); } // بقية الصفحات
+      await loadLogs({append:false});
+      while(!reachedEnd){ page++; await loadLogs({append:true}); }
       setToast(toastSuccess,'✅ تم تحميل جميع السجلات'); toastSuccess.show();
     }catch(e){
       console.error(e);
@@ -737,7 +688,7 @@
     else { setToast(toastError,'❌ فشل حذف السجلات'); toastError.show(); }
   });
   document.getElementById('btnPurgeRange').addEventListener('click', async ()=>{
-    const f=fFrom.value, t=fTo.value;
+    const f=document.getElementById('fFrom').value, t=document.getElementById('fTo').value;
     if(!f && !t){ setToast(toastInfo,'حدّد تاريخ "من" أو "إلى"'); toastInfo.show(); return; }
     if(f && t && (new Date(f)>new Date(t))){ setToast(toastError,'❌ نطاق التاريخ غير صحيح'); toastError.show(); return; }
     const ok=await showConfirm({title:'تأكيد الحذف حسب التاريخ',message:`سيتم حذف ضمن النطاق: ${f||'—'} — ${t||'—'}.`,confirmText:'حذف ضمن النطاق',confirmBtnClass:'btn-warning'});
@@ -762,7 +713,6 @@
     else { setToast(toastError,'❌ فشل حذف السجلات المحددة'); toastError.show(); }
   });
 
-  /* ===== تشغيل ===== */
   ensureAdmin().then(()=>loadLogs({append:false}));
   </script>
 </body>
