--- a/public/audit-logs.html
+++ b/public/audit-logs.html
@@ -46,7 +46,7 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <div class="d-flex flex-wrap justify-content-between align-items-center mb-4 gap-2">
       <h3 class="mb-0">سجل العمليات</h3>
       <div class="d-flex align-items-center gap-2">
