--- a/public/users-manage.html
+++ b/public/users-manage.html
@@ -86,7 +86,8 @@
   </style>
 </head>
 <body>
-  <div class="container">
+<!--  <div class="container"> -->
+  <div class="container-fluid" style="padding-top:40px">
     <!-- Header -->
     <div class="d-flex flex-wrap justify-content-between align-items-center mb-4 gap-2">
       <!-- يمين: العنوان فقط -->
